# last-line

./: README.md  index.html  package-lock.json  package.json  tsconfig.json
src/: App.tsx  RULES.md  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/core/: index.ts
src/core/cards/: base-card.ts  command-card.ts  event-card.ts  index.ts  unit-card.ts
src/core/cards/celestials/: anjo-guardiao.ts  arcanjo-da-justica.ts  bencao-divina.ts  campo-sagrado.ts  canto-sagrado.ts  centelha-divina.ts  index.ts  intervencao-divina.ts  pegasus-sagrado.ts
src/core/cards/dragons/: ascensao-draconica.ts  ceus-em-chamas.ts  dragao-anciao.ts  dragao-escarlate.ts  dragao-obsidiano.ts  index.ts  ovo-de-dragao.ts  ritual-de-incubacao.ts  tempestade-de-fogo.ts
src/core/cards/humans/: arquimago-supremo.ts  ataque-direcionado.ts  campo-de-treinamento.ts  cavaleiro-de-elite.ts  index.ts  mago-de-batalha.ts  recruta.ts  reforcos.ts  tatica-de-guerra.ts
src/core/cards/neutral/: index.ts  inspirar-coragem.ts  ordem-estrategica.ts  reorganizar-taticas.ts  terreno-neutro.ts
src/core/cards/structure/: base-card.ts  battle-effect-card.ts  card.ts  command-card.ts  event-card.ts  index.ts  unit-card.ts
src/core/cards/undead/: campo-profano.ts  convocacao-sombria.ts  ghoul-da-cripta.ts  index.ts  lorde-vampiro.ts  (+4 more)
src/core/state/: rules.ts  setup.ts  state.ts
src/ui/components/: Board.tsx  Card.tsx  Hand.tsx  index.ts  unit-card-layout.tsx
src/ui/hooks/: useGameState.ts
src/ui/pages/: Game.tsx  Menu.tsx  index.ts
src/ui/styles/: custom.css
(+6 files in other folders)
