[package]
name = "last-line"
version = "0.1.0"
description = "A Tauri App"
authors = ["Você"]
edition = "2021"
default-run = "last-line"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0", features = [] }
tauri-plugin-opener = "2.0.0"
